--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sun Aug 13 21:07:04 IRKT 2023
-sdk.dir=C\:\\Users\\Andrey\\AppData\\Local\\Android\\Sdk
+#Tue Aug 22 22:18:58 EET 2023
+sdk.dir=C\:\\Users\\mtink\\AppData\\Local\\Android\\Sdk
